под размещение3+env с бд

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 SECRET_KEY=<iulx96p#zi^oq01e$hj_2jj&n+waz**s-o7=_4%)u=kbk*3ma9>
 DEBUG=False
 ALLOWED_HOSTS=pyatt-production.up.railway.app
-DATABASE_URL=<URL для подключения к базе данных, который предоставит Railway>
+DATABASE_URL=postgresql://postgres:jdmcGqfKVRdsXbNBQFHdswjsbKTbmKni@postgres.railway.internal:5432/railway
+
