--- a/requirements.txt
+++ b/requirements.txt
@@ -257,7 +257,7 @@ python-multipart==0.0.9
 python-socketio==5.11.2
 pytube==15.0.0
 pytz==2022.7.1
-pywin32==306
+#pywin32==306
 pyxlsb==1.0.10
 PyYAML==6.0.1
 pyzmq==25.1.0
