--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ psycopg2>=2.9.9  # если используется PostgreSQL
 gunicorn>=20.1.0  # если нужен сервер для деплоя
 django-environ>=0.9.0  # для работы с .env
 Pillow>=10.0.0
+dj_database_url
+djangorestframework==3.14.0
