--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SECRET_KEY=iulx96p#zi^oq01e$hj_2jj&n+waz**s-o7=_4%)u=kbk*3ma9
+SECRET_KEY=z1igw%vv1="y*lg_2kuu80gat$5l07zhgs^j#9i#fwp)lr37d-("
 DEBUG=False
 ALLOWED_HOSTS=pyatt-production.up.railway.app
 DATABASE_URL=postgres://postgres:jdmcGqfKVRdsXbNBQFHdswjsbKTbmKni@postgres.railway.internal:5432/railway
