despair,THE ultimate despair

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SECRET_KEY="z1igw%vv1=y*lg_2kuu80gat$5l07zhgs^j#9i#fwp)lr37d-("
-DEBUG='False'
+DEBUG='True'
 ALLOWED_HOSTS='pyatt-production.up.railway.app'
 DATABASE_URL=postgresql://postgres:jdmcGqfKVRdsXbNBQFHdswjsbKTbmKni@autorack.proxy.rlwy.net:24715/railway
