despair,THE ultimate despair

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SECRET_KEY='meat'
+SECRET_KEY=meat
 DEBUG='True'
 ALLOWED_HOSTS='pyatt-production.up.railway.app'
 DATABASE_URL='postgresql://postgres:jdmcGqfKVRdsXbNBQFHdswjsbKTbmKni@postgres.railway.internal:5432/railway'
