oh, Im on to something

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ SECRET_KEY=meat
 DEBUG='True'
 ALLOWED_HOSTS='pyatt-production.up.railway.app'
 DATABASE_URL='postgresql://postgres:jdmcGqfKVRdsXbNBQFHdswjsbKTbmKni@postgres.railway.internal:5432/railway'
+CSRF_TRUSTED_ORIGINS=https://pyatt-production.up.railway.app
