--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=meat
 DEBUG='True'
 ALLOWED_HOSTS='pyatt-production.up.railway.app'
-DATABASE_URL='postgresql://postgres:jdmcGqfKVRdsXbNBQFHdswjsbKTbmKni@postgres.railway.internal:5432/railway'
+DATABASE_URL='postgresql://postgres:jdmcGqfKVRdsXbNBQFHdswjsbKTbmKni@autorack.proxy.rlwy.net:24715/railway'
 CSRF_TRUSTED_ORIGINS=https://pyatt-production.up.railway.app
